--- a/auth/login.html
+++ b/auth/login.html
@@ -15,10 +15,10 @@
     <link rel="stylesheet" href="../admin/assets/css/style.css" />
   </head>
 
-  <body class="auth">
+  <body class="auth m-0">
     <main class="form-signin w-100 m-auto">
-      <form>
-        <div class="fs-2 fw-bold text-center mb-4">اخبار</div>
+      <div class="fs-2 fw-bold text-center mb-4">اخبار</div>
+      <form submit-control form-wait="#wait">
         <div class="mb-3">
           <label class="form-label">ایمیل</label>
           <input type="email" class="form-control" />
@@ -28,6 +28,7 @@
           <label class="form-label">رمز عبور</label>
           <input type="password" class="form-control" />
         </div>
+        <div id="wait">لطفا صبر کنید!</div>
         <button class="w-100 btn btn-dark mt-4" type="submit">ورود</button>
       </form>
     </main>
@@ -37,5 +38,6 @@
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
       crossorigin="anonymous"
     ></script>
+    <script src="../libs/js/formlib.js"></script>
   </body>
 </html>
