--- a/auth/signup.html
+++ b/auth/signup.html
@@ -13,7 +13,7 @@
     />
 
     <link rel="stylesheet" href="../admin/assets/css/style.css" />
-    <link rel="stylesheet" href="../libs/js/mulltistepform.css" />
+    <link rel="stylesheet" href="/libs/pluslib/frontend/mulltistepform.css" />
   </head>
 
   <body class="auth m-0">
@@ -81,6 +81,6 @@
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
       crossorigin="anonymous"
     ></script>
-    <script src="../libs/js/multistepform.js"></script>
+    <script src="/libs/pluslib/frontend/multistepform.js"></script>
   </body>
 </html>
