autocomplete attribute & redirect

--- a/auth/signup.html
+++ b/auth/signup.html
@@ -32,7 +32,7 @@
             <b class="fw-bold fs-6">اطلاعات یکتا:</b>
             <div class="mb-3">
               <label class="form-label">نام کاربری</label>
-              <input type="text" class="form-control" name="uname" />
+              <input type="text" class="form-control" autocomplete="username" name="uname" />
             </div>
           </div>
           <div class="tab">
@@ -52,12 +52,12 @@
             <b class="fw-bold fs-6">اطلاعات ورود:</b>
             <div class="mb-3">
               <label class="form-label">ایمیل</label>
-              <input type="email" class="form-control" name="email" />
+              <input type="email" class="form-control" name="email" autocomplete="email" />
             </div>
 
             <div class="mb-3">
               <label class="form-label">رمز عبور</label>
-              <input type="password" name="pass" class="form-control" />
+              <input type="password" name="pass" class="form-control" autocomplete="current-password"/>
             </div>
           </div>
 
