use form-wait in signup

--- a/auth/signup.html
+++ b/auth/signup.html
@@ -25,6 +25,7 @@
         data-form-p="قبلی"
         data-form-s="ثبت نام"
         submit-control
+        form-wait="#wait"
         action="signup.php"
       >
         <div id="tabs">
@@ -76,7 +77,7 @@
             </div>
           </div>
 
-          <div class="final-tab d-none text-center">لطفا صبر کنید!</div>
+          <div id="wait">لطفا صبر کنید!</div>
 
           <div style="overflow: auto">
             <div class="mt-3 d-flex justify-content-center gap-1">
