--- a/auth/login.html
+++ b/auth/login.html
@@ -39,7 +39,7 @@
           />
         </div>
         <div id="wait">لطفا صبر کنید!</div>
-        <div id="error"></div>
+        <div id="error" class="text-danger"></div>
         <button
           class="w-100 btn btn-dark mt-4"
           type="submit"
