shared and public CSSs

--- a/auth/signup.html
+++ b/auth/signup.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="../admin/assets/css/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="/libs/pluslib/frontend/mulltistepform.css" />
   </head>
 
