--- a/auth/login.html
+++ b/auth/login.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="../admin/assets/css/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body class="auth m-0">
