Refactor use form-action instead of action

--- a/auth/login.html
+++ b/auth/login.html
@@ -18,7 +18,7 @@
   <body class="auth m-0">
     <main class="form-signin w-100 m-auto">
       <div class="fs-2 fw-bold text-center mb-4">اخبار</div>
-      <form submit-control form-wait="#wait" action="login.php">
+      <form submit-control form-wait="#wait" form-action="login.php">
         <div class="mb-3">
           <label class="form-label">نام کاربری</label>
           <input
