--- a/auth/signup.html
+++ b/auth/signup.html
@@ -26,7 +26,7 @@
         data-form-s="ثبت نام"
         submit-control
         form-wait="#wait"
-        action="signup.php"
+        form-action="signup.php"
       >
         <div id="tabs">
           <div class="tab">
