--- a/auth/login.html
+++ b/auth/login.html
@@ -19,6 +19,7 @@
     <main class="form-signin w-100 m-auto">
       <div class="fs-2 fw-bold text-center mb-4">اخبار</div>
       <form submit-control form-wait="#wait" form-action="login.php">
+        <div class="why"></div>
         <input type="hidden" name="back" ffqs="back" />
         <div class="mb-3">
           <label class="form-label">نام کاربری</label>
@@ -70,7 +71,13 @@
           () => (e.textContent = ""),
           ({ err }) => (e.textContent = JSON.stringify(err))
         ).init();
-      ffqs();
+        ffqs();
+        let $urlparams = new URLSearchParams(location.href);
+        let $why = document.querySelector(".why");
+        if ($urlparams.get("why") == "expired") {
+          $why.innerHTML =
+            '<div class="alert alert-danger">نشست شما به پایان رسیده است! دوباره وارد شوید!</div>';
+        }
       });
     </script>
 
