--- a/auth/login.html
+++ b/auth/login.html
@@ -63,7 +63,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="/libs/pluslib/frontend/formlib.js" type="module"></script>
-    <script src="../assets/js/ajaxInit1.js"></script>
+    <script type="module" src="../assets/js/ajaxInit1.js"></script>
     <script>
       window.addEventListener("load", () => {
         ffqs();
