--- a/auth/signup.html
+++ b/auth/signup.html
@@ -118,7 +118,7 @@
     <script src="/libs/pluslib/frontend/multistepform.js"></script>
     <script src="/libs/pluslib/frontend/formlib.js" type="module"></script>
     <script src="/libs/pluslib/frontend/ffqs.js"></script>
-    <script src="../assets/js/ajaxInit1.js"></script>
+    <script type="module" src="../assets/js/ajaxInit1.js"></script>
     <script>
       window.addEventListener("load", () => {
         ffqs();
