back urlparam for signup

--- a/auth/signup.html
+++ b/auth/signup.html
@@ -28,6 +28,8 @@
         form-wait="#wait"
         form-action="signup.php"
       >
+        <input type="hidden" name="back" ffqs="back" />
+
         <div id="tabs">
           <div class="tab">
             <b class="fw-bold fs-6">اطلاعات یکتا:</b>
