Easy Signup: Remove username field
* In future user can change default username from dashboard

--- a/auth/signup.html
+++ b/auth/signup.html
@@ -31,7 +31,7 @@
         <input type="hidden" name="back" ffqs="back" />
 
         <div id="tabs">
-          <div class="tab">
+          <!-- <div class="tab">
             <b class="fw-bold fs-6">اطلاعات یکتا:</b>
             <div class="mb-3">
               <label class="form-label">نام کاربری</label>
@@ -43,17 +43,17 @@
                 ffqs="name"
               />
             </div>
-          </div>
+          </div> -->
           <div class="tab">
             <b class="fw-bold fs-6">اطلاعات نام:</b>
             <div class="mb-3">
               <label class="form-label">نام</label>
-              <input type="text" class="form-control" name="fname" />
+              <input type="text" class="form-control" name="fname" ffqs="fname" />
             </div>
 
             <div class="mb-3">
               <label class="form-label">نام خانوادگی</label>
-              <input type="text" class="form-control" name="lname" />
+              <input type="text" class="form-control" name="lname" ffqs="lname" />
             </div>
           </div>
 
